--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,5 +14,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "src/index.js": {
+      "maxDuration": 10
+    }
   }
 }
